# advent-2023

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Macros.cmake
D1/: CMakeLists.txt  trebuchet.cpp  trebuchet.py
D2/: CMakeLists.txt  cube.cpp
D3/: CMakeLists.txt  gear.cpp
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake
include/: utils.hpp
